<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="electricBill"
            type="buu.informatics.s59160141.calculateelectricitybill.ElectricBill"/>
        <variable
            name="calculateViewModel"
            type="buu.informatics.s59160141.calculateelectricitybill.calculate.CalculateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".calculate.CalculateFragment">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/calculateTextView1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fontSize20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/input"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/unitTextView"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fontSize20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/input"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin50dp"
            android:layout_marginTop="@dimen/margin50dp"
            android:layout_marginEnd="@dimen/margin50dp"
            android:background="@color/btnBackground"
            android:text="@string/btnCalculateText"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fontSize20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin100dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@={electricBill.sum}"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin60dp"
            android:layout_marginEnd="@dimen/margin80dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/bathTextView"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fontSize30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

        <TextView
            android:id="@+id/btnDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin40dp"
            android:fontFamily="@font/roboto"
            android:text="@string/detailTextView"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/fontSize20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/input"
            android:layout_width="@dimen/layout95dp"
            android:layout_height="@dimen/layout50dp"
            android:layout_marginTop="@dimen/layout95dp"
            android:autofillHints=""
            android:inputType="number"
            android:maxLength="@integer/maxLength5"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>