<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="electricBill"
            type="buu.informatics.s59160141.calculateelectricitybill.ElectricBill"/>
        <variable
            name="detailViewModel"
            type="buu.informatics.s59160141.calculateelectricitybill.detail.DetailViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".detail.DetailFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/detail1_text"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin40dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/unit150_label"
            android:textColor="@color/colordark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/unit150Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin60dp"
            android:fontFamily="@font/roboto"
            android:text="@{String.valueOf(detailViewModel.unit150)}"
            android:textAlignment="textEnd"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/bathTextView"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin40dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/unit250_label"
            android:textColor="@color/colordark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/unit250Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin60dp"
            android:fontFamily="@font/roboto"
            android:text="@{String.valueOf(detailViewModel.unit250)}"
            android:textAlignment="textEnd"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/bathTextView"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin40dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/unit400_label"
            android:textColor="@color/colordark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/unit400Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin60dp"
            android:fontFamily="@font/roboto"
            android:text="@{String.valueOf(detailViewModel.unit400)}"
            android:textAlignment="textEnd"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
            app:layout_constraintEnd_toStartOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/bathTextView"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin40dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/serviceCharge_label"
            android:textColor="@color/colordark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/serviceChargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin60dp"
            android:fontFamily="@font/roboto"
            android:text="@{String.valueOf(detailViewModel.serviceCharge)}"
            android:textAlignment="textEnd"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
            app:layout_constraintEnd_toStartOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/bathTextView"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin40dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/baseSum_label"
            android:textColor="@color/colordark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/baseElectricChargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin60dp"
            android:fontFamily="@font/roboto"
            android:text="@{String.valueOf(detailViewModel.baseEletricCharge)}"
            android:textAlignment="textEnd"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
            app:layout_constraintEnd_toStartOf="@+id/textView24" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/bathTextView"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/detail2_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="121dp"
            android:layout_height="39dp"
            android:layout_marginStart="@dimen/margin40dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/ft_label"
            android:textColor="@color/colordark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/variableElectricBillText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin60dp"
            android:fontFamily="@font/roboto"
            android:text="@{String.valueOf(detailViewModel.ft)}"
            android:textAlignment="textEnd"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView26"
            app:layout_constraintEnd_toStartOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/bathTextView"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView26"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/detail3_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="115dp"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/margin40dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/vat_label"
            android:textColor="@color/colordark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />

        <TextView
            android:id="@+id/vatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin60dp"
            android:fontFamily="@font/roboto"
            android:text="@{String.valueOf(detailViewModel.vat)}"
            android:textAlignment="textEnd"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView30"
            app:layout_constraintEnd_toStartOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/bathTextView"
            android:textColor="@color/colordark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView30"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/sumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@{String.valueOf(detailViewModel.sum)}"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin60dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sumTextView"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/sumText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin60dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/bathTextView"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/sumText"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            android:background="@color/btnBackground"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/okTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sumText"
            android:onClick="@{() -> detailViewModel.onOK()}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>